syntax = "proto3";

package hash.test;

import "discounts.proto";

message Product {
  string id = 1;
  uint32 price_in_cents = 2;
  string title = 3;
  string description = 4;
  Discount discount = 5;
}